Envoyer/recevoir sms + dummy listes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GeoPhone</string>
+    <string name="service_name">ServiceListenerSMS</string>
+    <string name="actv_hint"><font size="14">Taper un contact/numéro</font></string>
 </resources>
