Permission management. Progress dialog when sending sms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">GeoPhone</string>
     <string name="service_name">ServiceListenerSMS</string>
+    <string name="app_intro">IntroActivity</string>
     <string name="actv_hint"><font size="14">Taper un contact/numéro</font></string>
     <string name="crouton_msg_sended">Message envoyé !</string>
+    <string name="crouton_permission_denied">Permission refusée</string>
+    <string name="dialog_permission_title">Permissions refusées</string>
+    <string name="dialog_permission_message">L\'application ne peut fonctionner sans ces permissions. Allez dans la menu Autorisations pour donner à GeoPhone les droits nécessaires</string>
+    <string name="dialog_permission_posbtn">Paramètres</string>
+    <string name="dialog_permission_negbtn">Quitter</string>
+    <string name="progress_dialog_title">SMS envoyé</string>
+    <string name="progress_dialog_message">En attente d|'une réponse...</string>
 </resources>
