--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA7qBQd6wKTJ_q7hvSKVtoKIUFoXcQHJeg</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_over_lock_screen">OverLockScreenActivity</string>
+    <string name="title_activity_white_list">Contacts autorisés</string>
 
     <!--
         Strings for general gui use
@@ -57,6 +58,7 @@
     -->
     <string name="dl_item_alert_text">Texte de l\'alerte : </string>
     <string name="dl_item_main_activity">Chercher un téléphone</string>
+    <string name="dl_item_list_contacts">Liste des contacts</string>
     <string name="dl_item_settings_label">Paramètres de l\'alerte</string>
     <string name="dl_item_vibrator">Vibreur</string>
     <string name="dl_item_flash">Flash</string>
@@ -64,16 +66,7 @@
     <string name="dl_item_about_label">A propos</string>
     <string name="dl_item_source_code">Sources</string>
     <string name="dl_item_contact">Contact</string>
-
-
-
-
-
-
-
-
-
-
+    <string name="title_activity_main2">Main2Activity</string>
 
 
 </resources>
